Add LLM analysis mode with tracking and reset functionality
  - Dual analysis modes: LLM (default) and rules-based
  - DeepSeek API integration with persistent caching
  - Email tracking system (processed emails + false positives)
  - --reset-tracking flag for spreadsheet migrations
  - Comprehensive documentation updates

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,14 @@ credentials.json
 token.json
 .env
 
+# LLM cache
+llm_cache.json
+
+# False positives tracking
+false_positives.json
+
+# Processed emails tracking
+processed_emails.json
+
 # Logs
 *.log
