--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ MATCHING_THRESHOLD=80
 # Logging
 # Options: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
+
+# DeepSeek API Configuration
+# Get your API key from https://platform.deepseek.com/
+DEEPSEEK_API_KEY=sk-your-api-key-here
+DEEPSEEK_MODEL=deepseek-chat
