--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,18 @@ MATCHING_THRESHOLD=80
 # Options: DEBUG, INFO, WARNING, ERROR
 LOG_LEVEL=INFO
 
-# DeepSeek API Configuration
-# Get your API key from https://platform.deepseek.com/
-DEEPSEEK_API_KEY=sk-your-api-key-here
-DEEPSEEK_MODEL=deepseek-chat
+# LLM Provider Configuration (for --mode llm)
+# Choose one provider and set corresponding API key
+LLM_PROVIDER=deepseek  # Options: openai, anthropic, google, deepseek
+
+# API Keys (set the one matching your LLM_PROVIDER)
+OPENAI_API_KEY=sk-your-openai-key-here          # From platform.openai.com
+ANTHROPIC_API_KEY=sk-ant-your-anthropic-key     # From console.anthropic.com
+GOOGLE_API_KEY=your-google-api-key              # From makersuite.google.com/app/apikey
+DEEPSEEK_API_KEY=sk-your-deepseek-key           # From platform.deepseek.com
+
+# Optional: Override default model for provider
+# LLM_MODEL=gpt-4o-mini                 # For OpenAI
+# LLM_MODEL=claude-3-5-haiku-20241022   # For Anthropic
+# LLM_MODEL=gemini-1.5-flash            # For Google
+# LLM_MODEL=deepseek-chat               # For DeepSeek
